# Object-oriented-analysis-and-design-2

lab01/: README.md  Диаграмма без названия.drawio.xml
lab01/ClickCounterApp/: ClickCounterApp.sln
lab01/ClickCounterApp/ClickCounterApp/: ClickCounter.cs  ClickCounterApp.csproj  Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Program.cs
lab01/ClickCounterApp/ClickCounterApp/Properties/: AssemblyInfo.cs  Resources.Designer.cs
lab01/ClickCounterSingleton/: ClickCounterSingleton.sln
lab01/ClickCounterSingleton/ClickCounterSingleton/: ClickCounter.cs  ClickCounterSingleton.csproj  Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Program.cs
lab01/ClickCounterSingleton/ClickCounterSingleton/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
lab02/: README.md
lab02/MusicAdapterPattern/: CMakeLists.txt  audioadapters.h  main.cpp  mainwindow.cpp  mainwindow.h
lab02/MusicNoAdapter/: CMakeLists.txt  CMakeUserPresets.json  mainwindow.cpp  mainwindow.h
lab03/: README.md
lab03/nopattern/: main.py
lab03/pattern/: main.py
